syntax = "proto3";
package proto;

option go_package = "github.com/farhanswitch/grpc-auth";


message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse{
  string token = 1;
  int64 expireAt = 2;
}

message AnnouncementRequest{}
message AnnouncementResponse{
  string message = 1;
}

service AuthService{
  rpc Login(LoginRequest) returns(LoginResponse){}
  rpc Announcement(AnnouncementRequest) returns(AnnouncementResponse){}
}